Update showLinks var. Fix right nav when there is no left nav. Replace links with buttons. Remove unnecessary logo alignment.

--- a/ui/src/scss/_patterns_navigation.scss
+++ b/ui/src/scss/_patterns_navigation.scss
@@ -15,8 +15,4 @@
       display: none;
     }
   }
-
-  .p-navigation__maas-logo {
-    vertical-align: top;
-  }
 }
